--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -97,7 +97,7 @@ markdown_extensions:
   pymdownx.snippets:
       base_path: ["snippets"]
       auto_append:
-        - services-banner.md
+        - feedback-banner.md
   pymdownx.emoji:
       emoji_index: !!python/name:material.extensions.emoji.twemoji
       emoji_generator: !!python/name:material.extensions.emoji.to_svg
