--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -168,7 +168,7 @@ extra:
             Thank you for your feedback! Help us improve by following this <a href="https://docs.google.com/forms/d/1bkWACehjqlwA0AKf-qTJcXvYbOSYgze8iTPXjntqmNo/edit" target="_blank" rel="noopener">feedback form</a>.
 
 nav:
-  - 'Welcome': index.md
+  - 'Home': index.md
   - 'Getting started':
       - 'Quickstart': quickstart.md
       - 'Features': features.md
