--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -178,7 +178,9 @@ nav:
       - 'Public DBaaS': deploy/mode-public.md
       - 'Bring your own account': deploy/mode-byoa.md
   - 'Services':
-      - 'PostgreSQL': services/postgresql.md
+     - 'PostgreSQL': services/postgresql.md 
+         - 'Example':
+            - smth.md
       - 'Valkey': services/valkey.md
       - 'MySQL': services/mysql.md
       - 'FerretDB': services/ferretdb.md
