--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -174,9 +174,17 @@ nav:
       - Features: features.md
       - Beta program: beta-program.md
       - Free Tier: free-tier.md
-  - Deployment modes:
-      - Public DBaaS: deploy/mode-public.md
-      - Bring your own account: deploy/mode-byoa.md
+  - Features:
+    - features/features.md
+    - Backups: 
+      - features/backups.md
+    - Autoscaling and serverless:
+      - features/autoscaling.md
+    - Deployment modes:
+      - Public DBaaS: 
+        - deploy/mode-public.md
+      - Bring your own account: 
+        - deploy/mode-byoa.md
   - Services:
     - PostgreSQL: 
       - services/postgresql.md 
