--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -175,8 +175,10 @@ nav:
       - Free Tier: free-tier.md
   - Features:
     - features/features.md
-    - Backups: features/backups.md
-    - Autoscaling and serverless: features/autoscaling.md
+    - Backups: 
+      - features/backups.md
+    - Autoscaling and serverless: 
+      - features/autoscaling.md
     - Deployment modes:
       - Public DBaaS: 
         - deploy/mode-public.md
