--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -190,6 +190,8 @@ nav:
       - For AI:
         - services/postgresql-for-ai.md
     - Valkey: services/valkey.md
+      - Connect to Valkey:
+        - services/valkey-connect.md
     - MySQL: services/mysql.md
     - FerretDB: services/ferretdb.md
 
