DOCS-156 Update the Get help widget and add get help doc 	modified:   _resource/overrides/main.html 	new file:   _resource/overrides/partials/banner.html 	modified:   docs/css/extra.css 	new file:   docs/get-help.md 	modified:   mkdocs.yml 	deleted:    snippets/services-banner.md

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -96,8 +96,8 @@ markdown_extensions:
   pymdownx.inlinehilite: {}
   pymdownx.snippets:
       base_path: ["snippets"]
-      auto_append:
-        - feedback-banner.md
+#      auto_append:
+#        - feedback-banner.md
   pymdownx.emoji:
       emoji_index: !!python/name:material.extensions.emoji.twemoji
       emoji_generator: !!python/name:material.extensions.emoji.to_svg
@@ -169,6 +169,7 @@ extra:
 
 nav:
   - Home: index.md
+  - get-help.md
   - Getting started:
       - Quickstart: quickstart.md
       - Beta program: beta-program.md
